syntax = "proto3";

option go_package = "github.com/science-engineering-art/gotify/proto/pb";

package songs;

message RawSong {
    int32 Init   = 1;
    int32 End    = 2;
    bytes Buffer = 3;
}

message SongMetadata {
    optional string Album       = 1;
    optional string AlbumArtist = 2;
    optional string Artist      = 3;
    optional string Comment     = 4;
    optional string Composer    = 5;
    optional string FileType    = 6;
    optional string Format      = 7;
    optional string Genre       = 8;
    optional string Lyrics      = 10;
    optional string Title       = 11;
    optional int32  Year        = 12;
}

message SongId {
    string Id = 1;
}

message Song {
    SongId                Id = 1;
    RawSong               RawSong  = 2;
    optional SongMetadata Metadata = 3;
}

message UpdatedSong {
    SongId                Id = 1;
    optional SongMetadata Metadata = 3;
}

message Response {
    bool Success = 1;
}

service SongService {
    rpc CreateSong(stream RawSong) returns (Response)    {}
    rpc UpdateSong(UpdatedSong)   returns (Response)    {}
    rpc GetSongById(SongId)        returns (Song)        {}
    rpc FilterSongs(SongMetadata)  returns (stream Song) {}
    rpc RemoveSongById(SongId)     returns (Response)    {}
}
